--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </div>
       </div>
       
+      <div class="container">
+      <nav class="navbar navbar-light bg-light">
+            <span class="navbar-brand mb-0 h1">Search Parameters</span>
+          </nav>
+
           <div class="form-group row">
             <label for="example-search-input" >Search Term</label>
             
@@ -60,6 +65,14 @@
                 </button>  
                 </div>    
             </div>
+        </div>
+
+        <div class="container">
+            <nav class="navbar navbar-light bg-light">
+                    <span class="navbar-brand mb-0 h1">Top Articles</span>
+                  </nav>
+                  <div></div>
+        </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
