--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <div class="jumbotron jumbotron-fluid">
+    <div class="container main-page">
+    <div class="jumbotron jumbotron-fluid heading">
         <div class="container">
           <h1 class="display-4 text-center">New York Times Search</h1>
         </div>
       </div>
       
-      <div class="container">
+      <div class="container middleSect">
       <nav class="navbar navbar-light bg-light">
             <span class="navbar-brand mb-0 h1">Search Parameters</span>
           </nav>
-
+        <div class="container">  
           <div class="form-group row">
             <label for="example-search-input" >Search Term</label>
             
@@ -63,15 +63,16 @@
             <button type="button" class="btn btn-default btn-sm">
                 <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Clear
                 </button>  
-                </div>    
+                </div>   
+                </div> 
             </div>
         </div>
 
-        <div class="container">
+        <div class="container art">
             <nav class="navbar navbar-light bg-light">
                     <span class="navbar-brand mb-0 h1">Top Articles</span>
                   </nav>
-                  <div></div>
+                  <div><p>&nbsp</p></div>
         </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
